--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             margin: 0;
         }
         </style>
-        <title>BAhi</title>
+        <title>CARTOGRAPHIE DE L'OFFRE NUMÉRIQUE DE LA RÉGION DE KAYES</title>
     </head>
     <body>
         <div id="map">
@@ -36,12 +36,12 @@
         <script src="js/labels.js"></script>
         <script src="js/leaflet-measure.js"></script>
         <script src="js/leaflet.markercluster.js"></script>
-        <script src="data/lieu_vente_reparation_0.js"></script>
-        <script src="data/lieu_reparation_1.js"></script>
-        <script src="data/lieu_ventes_2.js"></script>
-        <script src="data/lieu_connexion_et_formation_3.js"></script>
-        <script src="data/lieu_connexion_4.js"></script>
-        <script src="data/lieu_formation_5.js"></script>
+        <script src="data/Lieuxdeventeetdereparation_0.js"></script>
+        <script src="data/Lieuxdereparations_1.js"></script>
+        <script src="data/Lieuxdeventes_2.js"></script>
+        <script src="data/Lieuxdeconnexionsetdeformations_3.js"></script>
+        <script src="data/Lieuxdeconnexions_4.js"></script>
+        <script src="data/Lieuxdeformations_5.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
@@ -77,7 +77,7 @@
                 map.fitBounds(bounds_group.getBounds());
             }
         }
-        function pop_lieu_vente_reparation_0(feature, layer) {
+        function pop_Lieuxdeventeetdereparation_0(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <th scope="row">Cercle</th>\
@@ -123,9 +123,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_lieu_vente_reparation_0_0() {
+        function style_Lieuxdeventeetdereparation_0_0() {
             return {
-                pane: 'pane_lieu_vente_reparation_0',
+                pane: 'pane_Lieuxdeventeetdereparation_0',
         rotationAngle: 0.0,
         rotationOrigin: 'center center',
         icon: L.icon({
@@ -134,24 +134,28 @@
         }),
             }
         }
-        map.createPane('pane_lieu_vente_reparation_0');
-        map.getPane('pane_lieu_vente_reparation_0').style.zIndex = 400;
-        map.getPane('pane_lieu_vente_reparation_0').style['mix-blend-mode'] = 'normal';
-        var layer_lieu_vente_reparation_0 = new L.geoJson(json_lieu_vente_reparation_0, {
+        map.createPane('pane_Lieuxdeventeetdereparation_0');
+        map.getPane('pane_Lieuxdeventeetdereparation_0').style.zIndex = 400;
+        map.getPane('pane_Lieuxdeventeetdereparation_0').style['mix-blend-mode'] = 'normal';
+        var layer_Lieuxdeventeetdereparation_0 = new L.geoJson(json_Lieuxdeventeetdereparation_0, {
             attribution: '<a href=""></a>',
-            pane: 'pane_lieu_vente_reparation_0',
-            onEachFeature: pop_lieu_vente_reparation_0,
+            pane: 'pane_Lieuxdeventeetdereparation_0',
+            onEachFeature: pop_Lieuxdeventeetdereparation_0,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.marker(latlng, style_lieu_vente_reparation_0_0(feature));
+                return L.marker(latlng, style_Lieuxdeventeetdereparation_0_0(feature));
             },
         });
-        bounds_group.addLayer(layer_lieu_vente_reparation_0);
-        map.addLayer(layer_lieu_vente_reparation_0);
-        function pop_lieu_reparation_1(feature, layer) {
+        var cluster_Lieuxdeventeetdereparation_0 = new L.MarkerClusterGroup({showCoverageOnHover: false,
+            spiderfyDistanceMultiplier: 2});
+        cluster_Lieuxdeventeetdereparation_0.addLayer(layer_Lieuxdeventeetdereparation_0);
+
+        bounds_group.addLayer(layer_Lieuxdeventeetdereparation_0);
+        cluster_Lieuxdeventeetdereparation_0.addTo(map);
+        function pop_Lieuxdereparations_1(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <th scope="row">Cercle</th>\
@@ -197,9 +201,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_lieu_reparation_1_0() {
+        function style_Lieuxdereparations_1_0() {
             return {
-                pane: 'pane_lieu_reparation_1',
+                pane: 'pane_Lieuxdereparations_1',
         rotationAngle: 0.0,
         rotationOrigin: 'center center',
         icon: L.icon({
@@ -208,24 +212,28 @@
         }),
             }
         }
-        map.createPane('pane_lieu_reparation_1');
-        map.getPane('pane_lieu_reparation_1').style.zIndex = 401;
-        map.getPane('pane_lieu_reparation_1').style['mix-blend-mode'] = 'normal';
-        var layer_lieu_reparation_1 = new L.geoJson(json_lieu_reparation_1, {
+        map.createPane('pane_Lieuxdereparations_1');
+        map.getPane('pane_Lieuxdereparations_1').style.zIndex = 401;
+        map.getPane('pane_Lieuxdereparations_1').style['mix-blend-mode'] = 'normal';
+        var layer_Lieuxdereparations_1 = new L.geoJson(json_Lieuxdereparations_1, {
             attribution: '<a href=""></a>',
-            pane: 'pane_lieu_reparation_1',
-            onEachFeature: pop_lieu_reparation_1,
+            pane: 'pane_Lieuxdereparations_1',
+            onEachFeature: pop_Lieuxdereparations_1,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.marker(latlng, style_lieu_reparation_1_0(feature));
+                return L.marker(latlng, style_Lieuxdereparations_1_0(feature));
             },
         });
-        bounds_group.addLayer(layer_lieu_reparation_1);
-        map.addLayer(layer_lieu_reparation_1);
-        function pop_lieu_ventes_2(feature, layer) {
+        var cluster_Lieuxdereparations_1 = new L.MarkerClusterGroup({showCoverageOnHover: false,
+            spiderfyDistanceMultiplier: 2});
+        cluster_Lieuxdereparations_1.addLayer(layer_Lieuxdereparations_1);
+
+        bounds_group.addLayer(layer_Lieuxdereparations_1);
+        cluster_Lieuxdereparations_1.addTo(map);
+        function pop_Lieuxdeventes_2(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <th scope="row">Cercle</th>\
@@ -271,9 +279,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_lieu_ventes_2_0() {
+        function style_Lieuxdeventes_2_0() {
             return {
-                pane: 'pane_lieu_ventes_2',
+                pane: 'pane_Lieuxdeventes_2',
         rotationAngle: 0.0,
         rotationOrigin: 'center center',
         icon: L.icon({
@@ -282,28 +290,28 @@
         }),
             }
         }
-        map.createPane('pane_lieu_ventes_2');
-        map.getPane('pane_lieu_ventes_2').style.zIndex = 402;
-        map.getPane('pane_lieu_ventes_2').style['mix-blend-mode'] = 'normal';
-        var layer_lieu_ventes_2 = new L.geoJson(json_lieu_ventes_2, {
+        map.createPane('pane_Lieuxdeventes_2');
+        map.getPane('pane_Lieuxdeventes_2').style.zIndex = 402;
+        map.getPane('pane_Lieuxdeventes_2').style['mix-blend-mode'] = 'normal';
+        var layer_Lieuxdeventes_2 = new L.geoJson(json_Lieuxdeventes_2, {
             attribution: '<a href=""></a>',
-            pane: 'pane_lieu_ventes_2',
-            onEachFeature: pop_lieu_ventes_2,
+            pane: 'pane_Lieuxdeventes_2',
+            onEachFeature: pop_Lieuxdeventes_2,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.marker(latlng, style_lieu_ventes_2_0(feature));
+                return L.marker(latlng, style_Lieuxdeventes_2_0(feature));
             },
         });
-        var cluster_lieu_ventes_2 = new L.MarkerClusterGroup({showCoverageOnHover: false,
+        var cluster_Lieuxdeventes_2 = new L.MarkerClusterGroup({showCoverageOnHover: false,
             spiderfyDistanceMultiplier: 2});
-        cluster_lieu_ventes_2.addLayer(layer_lieu_ventes_2);
+        cluster_Lieuxdeventes_2.addLayer(layer_Lieuxdeventes_2);
 
-        bounds_group.addLayer(layer_lieu_ventes_2);
-        cluster_lieu_ventes_2.addTo(map);
-        function pop_lieu_connexion_et_formation_3(feature, layer) {
+        bounds_group.addLayer(layer_Lieuxdeventes_2);
+        cluster_Lieuxdeventes_2.addTo(map);
+        function pop_Lieuxdeconnexionsetdeformations_3(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <th scope="row">Cercle</th>\
@@ -381,9 +389,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_lieu_connexion_et_formation_3_0() {
+        function style_Lieuxdeconnexionsetdeformations_3_0() {
             return {
-                pane: 'pane_lieu_connexion_et_formation_3',
+                pane: 'pane_Lieuxdeconnexionsetdeformations_3',
                 shape: 'triangle',
                 radius: 7.6,
                 opacity: 1,
@@ -397,28 +405,28 @@
                 fillColor: 'rgba(202,0,47,1.0)',
             }
         }
-        map.createPane('pane_lieu_connexion_et_formation_3');
-        map.getPane('pane_lieu_connexion_et_formation_3').style.zIndex = 403;
-        map.getPane('pane_lieu_connexion_et_formation_3').style['mix-blend-mode'] = 'normal';
-        var layer_lieu_connexion_et_formation_3 = new L.geoJson(json_lieu_connexion_et_formation_3, {
+        map.createPane('pane_Lieuxdeconnexionsetdeformations_3');
+        map.getPane('pane_Lieuxdeconnexionsetdeformations_3').style.zIndex = 403;
+        map.getPane('pane_Lieuxdeconnexionsetdeformations_3').style['mix-blend-mode'] = 'normal';
+        var layer_Lieuxdeconnexionsetdeformations_3 = new L.geoJson(json_Lieuxdeconnexionsetdeformations_3, {
             attribution: '<a href=""></a>',
-            pane: 'pane_lieu_connexion_et_formation_3',
-            onEachFeature: pop_lieu_connexion_et_formation_3,
+            pane: 'pane_Lieuxdeconnexionsetdeformations_3',
+            onEachFeature: pop_Lieuxdeconnexionsetdeformations_3,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.shapeMarker(latlng, style_lieu_connexion_et_formation_3_0(feature));
+                return L.shapeMarker(latlng, style_Lieuxdeconnexionsetdeformations_3_0(feature));
             },
         });
-        var cluster_lieu_connexion_et_formation_3 = new L.MarkerClusterGroup({showCoverageOnHover: false,
+        var cluster_Lieuxdeconnexionsetdeformations_3 = new L.MarkerClusterGroup({showCoverageOnHover: false,
             spiderfyDistanceMultiplier: 2});
-        cluster_lieu_connexion_et_formation_3.addLayer(layer_lieu_connexion_et_formation_3);
+        cluster_Lieuxdeconnexionsetdeformations_3.addLayer(layer_Lieuxdeconnexionsetdeformations_3);
 
-        bounds_group.addLayer(layer_lieu_connexion_et_formation_3);
-        cluster_lieu_connexion_et_formation_3.addTo(map);
-        function pop_lieu_connexion_4(feature, layer) {
+        bounds_group.addLayer(layer_Lieuxdeconnexionsetdeformations_3);
+        cluster_Lieuxdeconnexionsetdeformations_3.addTo(map);
+        function pop_Lieuxdeconnexions_4(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <th scope="row">Cercle</th>\
@@ -496,9 +504,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_lieu_connexion_4_0() {
+        function style_Lieuxdeconnexions_4_0() {
             return {
-                pane: 'pane_lieu_connexion_4',
+                pane: 'pane_Lieuxdeconnexions_4',
                 shape: 'triangle',
                 radius: 7.6,
                 opacity: 1,
@@ -512,28 +520,28 @@
                 fillColor: 'rgba(0,0,255,1.0)',
             }
         }
-        map.createPane('pane_lieu_connexion_4');
-        map.getPane('pane_lieu_connexion_4').style.zIndex = 404;
-        map.getPane('pane_lieu_connexion_4').style['mix-blend-mode'] = 'normal';
-        var layer_lieu_connexion_4 = new L.geoJson(json_lieu_connexion_4, {
+        map.createPane('pane_Lieuxdeconnexions_4');
+        map.getPane('pane_Lieuxdeconnexions_4').style.zIndex = 404;
+        map.getPane('pane_Lieuxdeconnexions_4').style['mix-blend-mode'] = 'normal';
+        var layer_Lieuxdeconnexions_4 = new L.geoJson(json_Lieuxdeconnexions_4, {
             attribution: '<a href=""></a>',
-            pane: 'pane_lieu_connexion_4',
-            onEachFeature: pop_lieu_connexion_4,
+            pane: 'pane_Lieuxdeconnexions_4',
+            onEachFeature: pop_Lieuxdeconnexions_4,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.shapeMarker(latlng, style_lieu_connexion_4_0(feature));
+                return L.shapeMarker(latlng, style_Lieuxdeconnexions_4_0(feature));
             },
         });
-        var cluster_lieu_connexion_4 = new L.MarkerClusterGroup({showCoverageOnHover: false,
+        var cluster_Lieuxdeconnexions_4 = new L.MarkerClusterGroup({showCoverageOnHover: false,
             spiderfyDistanceMultiplier: 2});
-        cluster_lieu_connexion_4.addLayer(layer_lieu_connexion_4);
+        cluster_Lieuxdeconnexions_4.addLayer(layer_Lieuxdeconnexions_4);
 
-        bounds_group.addLayer(layer_lieu_connexion_4);
-        cluster_lieu_connexion_4.addTo(map);
-        function pop_lieu_formation_5(feature, layer) {
+        bounds_group.addLayer(layer_Lieuxdeconnexions_4);
+        cluster_Lieuxdeconnexions_4.addTo(map);
+        function pop_Lieuxdeformations_5(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <th scope="row">Cercle</th>\
@@ -611,9 +619,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_lieu_formation_5_0() {
+        function style_Lieuxdeformations_5_0() {
             return {
-                pane: 'pane_lieu_formation_5',
+                pane: 'pane_Lieuxdeformations_5',
                 shape: 'triangle',
                 radius: 7.6,
                 opacity: 1,
@@ -627,25 +635,39 @@
                 fillColor: 'rgba(163,232,149,1.0)',
             }
         }
-        map.createPane('pane_lieu_formation_5');
-        map.getPane('pane_lieu_formation_5').style.zIndex = 405;
-        map.getPane('pane_lieu_formation_5').style['mix-blend-mode'] = 'normal';
-        var layer_lieu_formation_5 = new L.geoJson(json_lieu_formation_5, {
+        map.createPane('pane_Lieuxdeformations_5');
+        map.getPane('pane_Lieuxdeformations_5').style.zIndex = 405;
+        map.getPane('pane_Lieuxdeformations_5').style['mix-blend-mode'] = 'normal';
+        var layer_Lieuxdeformations_5 = new L.geoJson(json_Lieuxdeformations_5, {
             attribution: '<a href=""></a>',
-            pane: 'pane_lieu_formation_5',
-            onEachFeature: pop_lieu_formation_5,
+            pane: 'pane_Lieuxdeformations_5',
+            onEachFeature: pop_Lieuxdeformations_5,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.shapeMarker(latlng, style_lieu_formation_5_0(feature));
+                return L.shapeMarker(latlng, style_Lieuxdeformations_5_0(feature));
             },
         });
-        bounds_group.addLayer(layer_lieu_formation_5);
-        map.addLayer(layer_lieu_formation_5);
+        var cluster_Lieuxdeformations_5 = new L.MarkerClusterGroup({showCoverageOnHover: false,
+            spiderfyDistanceMultiplier: 2});
+        cluster_Lieuxdeformations_5.addLayer(layer_Lieuxdeformations_5);
+
+        bounds_group.addLayer(layer_Lieuxdeformations_5);
+        cluster_Lieuxdeformations_5.addTo(map);
+        var title = new L.Control();
+        title.onAdd = function (map) {
+            this._div = L.DomUtil.create('div', 'info');
+            this.update();
+            return this._div;
+        };
+        title.update = function () {
+            this._div.innerHTML = '<h2>CARTOGRAPHIE DE L\'OFFRE NUMÉRIQUE DE LA RÉGION DE KAYES</h2>';
+        };
+        title.addTo(map);
         var baseMaps = {'OSM': basemap0, 'OSM HOT': basemap1, 'OSM B&W': basemap2};
-        L.control.layers(baseMaps,{'<img src="legend/lieu_formation_5.png" /> lieu_formation': layer_lieu_formation_5,'<img src="legend/lieu_connexion_4.png" /> lieu_connexion': cluster_lieu_connexion_4,'<img src="legend/lieu_connexion_et_formation_3.png" /> lieu_connexion_et_formation': cluster_lieu_connexion_et_formation_3,'<img src="legend/lieu_ventes_2.png" /> lieu_ventes': cluster_lieu_ventes_2,'<img src="legend/lieu_reparation_1.png" /> lieu_reparation': layer_lieu_reparation_1,'<img src="legend/lieu_vente_reparation_0.png" /> lieu_vente_reparation': layer_lieu_vente_reparation_0,},{collapsed:false}).addTo(map);
+        L.control.layers(baseMaps,{'<img src="legend/Lieuxdeformations_5.png" /> Lieux de formations': cluster_Lieuxdeformations_5,'<img src="legend/Lieuxdeconnexions_4.png" /> Lieux de connexions': cluster_Lieuxdeconnexions_4,'<img src="legend/Lieuxdeconnexionsetdeformations_3.png" /> Lieux de connexions et de formations': cluster_Lieuxdeconnexionsetdeformations_3,'<img src="legend/Lieuxdeventes_2.png" /> Lieux de ventes': cluster_Lieuxdeventes_2,'<img src="legend/Lieuxdereparations_1.png" /> Lieux de reparations': cluster_Lieuxdereparations_1,'<img src="legend/Lieuxdeventeetdereparation_0.png" /> Lieux de vente et de reparation': cluster_Lieuxdeventeetdereparation_0,},{collapsed:false}).addTo(map);
         setBounds();
         </script>
     </body>
